application/nextjs-app-v3/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
    version: v1
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      securityContext:
        runAsUser: 1001
      containers:
      - image: 119834080691.dkr.ecr.ap-northeast-1.amazonaws.com/fetch-backend:latest # fetch-app-backend:v1.0.3
        name: fetch-app-backend
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /api/healthz
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /api/healthz
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3 
        securityContext:
          allowPrivilegeEscalation: false

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend-service
spec:
  ports:
  ports:
  - port: 8000
    name: http 
  selector:
    app: backend
